<resources>
    <string name="app_name">PickupLookup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="or">-OR-</string>
    <string name="createAccount">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="verifyPassword">Verify Password</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="bio">Bio</string>
    <string name="sports">Sports</string>
    <string name="profile">Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hockey">Hockey</string>
    <string name="basketball">Basketball</string>
    <string name="baseball">Baseball</string>
    <string name="soccer">Soccer</string>
    <string name="flagFootball">Flag Football</string>
    <string name="other">Other</string>
    <string name="skill">Skill</string>
    <string name="beginner">Beginner</string>
    <string name="amateur">Amateur</string>
    <string name="expert">Expert</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
